--- a/requirements.txt
+++ b/requirements.txt
@@ -12,3 +12,7 @@ setuptools==68.2.2
 six==1.16.0
 tzdata==2023.3
 urllib3==2.0.7
+google-api-python-client==2.145.0
+openpyxl==3.1.5
+pandas==2.2.2
+oauthlib==3.2.2
